build: Use accessor functions

Direct struct access has been deprecated, so use the appropriate
replacements to build with GSEAL enabled.

https://bugzilla.gnome.org/show_bug.cgi?id=612491